--- a/Project1.vcxproj
+++ b/Project1.vcxproj
@@ -124,9 +124,14 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
+    <ClInclude Include="Function.h" />
+    <ClInclude Include="Paint.h" />
     <ClInclude Include="Project1.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="Tick.h" />
+    <ClInclude Include="Variable.h" />
+    <ClInclude Include="WindowsFunction.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Project1.cpp" />
